--- a/index3.html
+++ b/index3.html
@@ -7,12 +7,13 @@
   <style>
     body {
       margin: 0;
-      background: #0f0f0f;
+      background: radial-gradient(circle at center, #1a1a1a 0%, #0a0a0a 100%);
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      font-family: sans-serif;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
     }
     #ui {
       margin-right: 20px;
@@ -21,22 +22,25 @@
       gap: 10px;
     }
     button {
-      padding: 10px;
+      padding: 10px 16px;
       font-size: 16px;
-      background: #1f1f1f;
+      background: #222;
       color: white;
-      border: 1px solid #0f0;
+      border: 1px solid lime;
       cursor: pointer;
-      transition: all 0.2s ease;
+      border-radius: 8px;
+      transition: 0.3s;
     }
     button:hover {
-      background: #2f2f2f;
+      background: #333;
+      transform: scale(1.05);
     }
     canvas {
-      background: #111;
-      box-shadow: 0 0 20px #0f0;
+      background: linear-gradient(to bottom right, #111, #050505);
+      box-shadow: 0 0 25px lime;
+      border-radius: 10px;
       image-rendering: pixelated;
-      transition: transform 0.1s;
+      transition: transform 0.15s ease;
     }
   </style>
 </head>
@@ -62,10 +66,21 @@
     let running = false;
     let paused = false;
 
+    function getRandomFoodPosition() {
+      let position;
+      do {
+        position = {
+          x: Math.floor(Math.random() * tileCount),
+          y: Math.floor(Math.random() * tileCount)
+        };
+      } while (snake.some(s => s.x === position.x && s.y === position.y));
+      return position;
+    }
+
     function startGame() {
       snake = [{ x: 10, y: 10 }];
-      velocity = { x: 0, y: 0 };
-      food = { x: Math.floor(Math.random() * tileCount), y: Math.floor(Math.random() * tileCount) };
+      velocity = { x: 1, y: 0 };
+      food = getRandomFoodPosition();
       score = 0;
       frame = 0;
       running = true;
@@ -99,7 +114,12 @@
 
       if (velocity.x === 0 && velocity.y === 0) return;
 
-      if (head.x < 0 || head.y < 0 || head.x >= tileCount || head.y >= tileCount || snake.some(s => s.x === head.x && s.y === head.y)) {
+      // collision check
+      if (
+        head.x < 0 || head.y < 0 ||
+        head.x >= tileCount || head.y >= tileCount ||
+        snake.some((s, i) => i !== 0 && s.x === head.x && s.y === head.y)
+      ) {
         alert("Game Over! Score: " + score);
         running = false;
         return;
@@ -109,9 +129,9 @@
 
       if (head.x === food.x && head.y === food.y) {
         score++;
-        canvas.style.transform = "scale(1.05)";
+        canvas.style.transform = "scale(1.08)";
         setTimeout(() => canvas.style.transform = "scale(1)", 100);
-        food = { x: Math.floor(Math.random() * tileCount), y: Math.floor(Math.random() * tileCount) };
+        food = getRandomFoodPosition();
       } else {
         snake.pop();
       }
@@ -121,14 +141,27 @@
       ctx.fillStyle = "#111";
       ctx.fillRect(0, 0, canvas.width, canvas.height);
 
+      // snake
       ctx.fillStyle = "lime";
-      for (let s of snake) {
+      snake.forEach((s, i) => {
+        ctx.globalAlpha = 1 - i * 0.03;
         ctx.fillRect(s.x * gridSize, s.y * gridSize, gridSize - 1, gridSize - 1);
-      }
+      });
+      ctx.globalAlpha = 1;
 
-      ctx.fillStyle = "red";
-      ctx.fillRect(food.x * gridSize, food.y * gridSize, gridSize - 1, gridSize - 1);
+      // food
+      ctx.fillStyle = "#f00";
+      ctx.beginPath();
+      ctx.arc(
+        food.x * gridSize + gridSize / 2,
+        food.y * gridSize + gridSize / 2,
+        gridSize / 2.5,
+        0,
+        Math.PI * 2
+      );
+      ctx.fill();
 
+      // score
       ctx.fillStyle = "white";
       ctx.font = "16px monospace";
       ctx.fillText("Score: " + score, 10, 20);
